app/assets/stylesheets/forms.css.scss
.form-inline {
  display: inline;
  margin-right: 10px;
}

.half-width {
  width: 50%;
}

.first-name {
  padding-right: 5px;
}

.last-name {
  padding-left: 5px;
}

#error_explanation {
  list-style: none;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-left: 15px;
  color: red;
}

#users-table th a.current.asc:after {
  content: " \f0dd";
  font-family: FontAwesome
}

#users-table th a.current.desc:after {
  content: " \f0de";
  font-family: FontAwesome;
}

.form-horizontal .checkbox {
  margin-left: 20px;
  margin-top: 10px;
}

.checkbox input[type="checkbox"] {
  position: absolute;
  margin-left: -20px;
  margin-top: -7px;
}

